# state_machine

./: CMakeLists.txt  lab1.cpp  minimization.cpp  minimization.h  str_synthesys.cpp
lab3/: CMakeLists.txt  input.txt  lab3.cpp  lab3.hpp  main.cpp
lab4/: CMakeLists.txt  lab4.cpp  lab4.hpp  main.cpp
